Fixing the input overflow thing the right way

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -130,12 +130,12 @@ h2 {
 		}
 		input {
 			flex-grow: 3;
-			margin-right: -16px;
+			width: calc(100% - 16px);
+			margin-right: 10px;
 		}
 		button {
 			flex-grow: 1.5;
 			background: lighten($baseColor, 25%);;
-			margin-left: -16px;
 		}
 	}
 }
